--- a/src/style/Detalhes.css
+++ b/src/style/Detalhes.css
@@ -180,3 +180,7 @@
 .div-buttons-scroller img{
   width: 40px;
 }
+
+.copy {
+  color: black;
+}
